--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,15 @@ input:focus {
   z-index: 2;
 }
 
+.field-icon-no-result {
+  font-size: 20px;
+  float: right;
+  margin-right: 15px;
+  margin-top: -26px;
+  position: relative;
+  z-index: 2;
+}
+
 .field-icon-reg {
   float: right;
   margin-right: 30px;
@@ -115,9 +124,8 @@ color: RED;
   border: 1px solid #505050;
 }
 
-.img-admin-card {
-  max-width: 15vh;
-  max-height: 15vh;
+.table-img {
+  max-height: 5vh;
 }
 
 
@@ -239,6 +247,12 @@ cursor: pointer;
  
   .tableHover:hover {
     background-color:  #6c757d6c!important;
+  }
+  .no-result {
+    
+  background-color: hsla(354, 70%, 54%, 0.9);
+  border: 1px solid black;
+  color:black;
   }
 
 
