--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -61,8 +61,9 @@
 						</tbody>
 					</table>
 				</div>
+				<div class="border border-white p-4 text-center">Vous avez la possibilité de modifier l'adresse de livraison de votre commande, en cliquant sur celle-ci, tant qu'elle n'est pas envoyée.</div>
 			{% else %}
-				<div class="border border-white p-4">Vous n'avez pas encore commandé de création.</div>
+				<div class="border border-white p-4 text-center">Vous n'avez pas encore commandé de création.</div>
 			{% endif %}
 			<div class="row d-flex justify-content-center logoSpec">
 				<div class="col-3 col-md-2 col-lg-2 mt-3">
