--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,7 +18,7 @@
 				{{ form_start(registrationForm,{'attr': {'id': 'registration_form'}}) }}
 				{{ form_errors(registrationForm) }}
 
-				<div class="row justify-content-center mt-4">
+				<div class="row justify-content-center">
 					<div class="col-10 col-md-8 col-lg-6 text-start">
 						<div>{{ form_widget(registrationForm.email) }}</div>
 						<div id="#errorMail">{{ form_errors(registrationForm.email) }}</div>
@@ -40,14 +40,17 @@
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
-					<div class="col-10 col-md-8 col-lg-6 m-3 text-center">
-						<button type="submit" class="btn btn-lg btn-custom-border">M'inscrire</button>
+					<div
+						class="col-10 col-md-8 col-lg-6 m-3 text-center">
+						{# <button type="submit" class="btn btn-lg btn-custom-border">M'inscrire</button> #}
+						{% include '_partials/_hcaptcha_register_submit_button.html.twig' %}
+
 						{{ form_end(registrationForm) }}
 					</div>
 				</div>
 				<div class="row justify-content-center mt-4">
 					<div class="col-12 text-center">
-						<a href="{{ path('login')}}">Déjà membre ? Connectez-vous !</a>
+						<a href="{{ path('login')}}" class="custom-link">Déjà membre ? Connectez-vous !</a>
 					</div>
 				</div>
 			</div>
@@ -59,4 +62,9 @@
 			</div>
 		</div>
 	</div>
+{% endblock %}
+{% block javascripts %}
+	{{ parent() }}
+	<script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+	{% include '_partials/_hcaptcha_callback_script_register.html.twig' %}
 {% endblock %}
