icon-field-result custom.js

--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -2,9 +2,9 @@
 	<div class="container-fluid">
 
 		<div class="row d-flex align-items-center justify-content-between navBlack">
-			<div class="col-2 mt-1">
+			<div class="col-2">
 				<a href="javascript:void(0);" onclick="burgerToggle()">
-					<img id="burger" class="card-img  d-md-none" src="/img/burger.png" alt="logo">
+					<img id="burger" class="img-burger d-md-none" src="/img/burger.png" alt="logo">
 				</a>
 			</div>
 			<div class="col-7 col-md-4 col-lg-3 mt-1">
