--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -58,7 +58,7 @@
 
 				<div class="row">
 					<div class="col text-center mt-4">
-						<a href="{{ path('register')}}">Nouveau membre ? Inscrivez-vous !</a>
+						<a href="{{ path('register')}}" class="custom-link">Nouveau membre ? Inscrivez-vous !</a>
 					</div>
 				</div>
 
