--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,13 @@ input:focus {
   box-shadow: 0 4px 5px black;
 }
 
+.img-burger {
+  max-width: 15vw;
+  height: auto;
+  margin-left: -10px;
+}
+
+
 .coverBlack {
   background-color: rgba(0, 0, 0, 0.99);
   box-shadow: 0 4px 5px rgba(0,0,0,0.99);
@@ -86,19 +93,21 @@ input:focus {
 .field-icon-no-result {
   font-size: 20px;
   float: right;
-  margin-right: 15px;
-  margin-top: -26px;
+  margin-right: 12px;
+  margin-top: -27px;
   position: relative;
   z-index: 2;
+  background-color: black;
 }
 
 .field-icon-result {
   font-size: 20px;
   float: right;
-  margin-right: 15px;
-  margin-top: -26px;
+  margin-right: 12px;
+  margin-top: -27px;
   position: relative;
   z-index: 2;
+  background-color: black;
 }
 
 .field-icon-reg {
