--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -117,7 +117,7 @@
 	</div>
 	<div class="row d-flex justify-content-center logoSpec">
 		<div class="col-3 col-md-2 col-lg-2 mt-3">
-			<img class="card-img" src="./img/JUL.png" alt="sign logo"></div>
+			<img class="card-img" src="/img/JUL.png" alt="sign logo"></div>
 	</div>
 </div>{% endblock %}{% block javascripts %}
 {{ parent() }}{% endblock %}
