--- a/public/css/style.css
+++ b/public/css/style.css
@@ -314,25 +314,70 @@ color:black;
 
  
 
-  /* .sorting_asc {
-   background-color: cadetblue!important;
-  }
-  .sorting_desc {
-   background-color:brown!important;
-  }
-  .sorting {
-    background-color:burlywood!important;
-  } */
+.grid {
+  background: rgb(0, 0, 0);
+  width: 100vw;
+  max-height: 100vh;
+  /* margin-top: calc(30vw/1.3); */
 
+}
 
-/* form-control {
-  border: none;
-  border-top: 1px solid #505050;
-  background-color: black;
-  color: #ffffff;
-  font-size: 14px;
-  } */
-/* 
-nav {
-  box-shadow: 0 5px 5px black;
-} */
+/* clearfix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- grid-item ---- */
+
+.grid-item {
+  /* border: 1px solid yellow!important; */
+
+  width: 10vw;
+  height: 10vh;
+  float: left;
+  background: url(/img/key.svg);
+  transform: rotate(0 deg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  /* position: relative;
+  border: 2px solid #333;
+  border-color: hsla(0, 0%, 0%, 0.5); */
+  border-radius: 5px;
+  animation-name: monAnimation;
+  animation-duration: 10s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+
+.grid-item--width2 { 
+  width:  2vw;
+}
+.grid-item--width3 { 
+  width:  3vw;
+}
+.grid-item--width4 {
+  width:  4vw;
+}
+
+.grid-item--height2 { 
+  height: 2vh;
+}
+.grid-item--height3 {
+  height: 4vh;
+}
+.grid-item--height4 {
+  height: 4vh;
+}
+
+@keyframes monAnimation {
+
+  0% {
+    transform: rotate(calc(rotate()+180)deg)
+  } 50% {
+    transform: rotate(-180deg)
+  } 100% {
+    transform: rotate(calc(rotate()+180)deg)
+}}
