--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -134,7 +134,7 @@
 
 		<div class="row d-flex justify-content-center">
 			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+				<img class="card-img" src="/img/JUL.png" alt="sign logo">
 			</div>
 		</div>
 	</div>
