--- a/templates/security/forgotten_password.html.twig
+++ b/templates/security/forgotten_password.html.twig
@@ -27,7 +27,7 @@
 
 		<div class="row d-flex justify-content-center logoLogin">
 			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+				<img class="card-img" src="/img/JUL.png" alt="sign logo">
 			</div>
 		</div>
 	</div>
