WebhookController_User_OrderStripe_MAnyToOne

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,8 +30,7 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 			<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 			<script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-			{#<script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>#}
 			<script src="/js/custom.js"></script>
 		{% endblock %}
 	</body>
-</html></body></html>
+</html>
