--- a/templates/user/payment.html.twig
+++ b/templates/user/payment.html.twig
@@ -29,7 +29,7 @@
 						{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
 							<div class="text-center">
 								<form action="{{ path('user_checkout' , {'slug':product.slug} )}}" method="POST">
-									<button type="submit" class="btn btn-custom-border mt-3">Paiement
+									<button type="submit" id="checkout-button" class="btn btn-custom-border mt-3">Paiement
 										{{product.price}}
 										€</button>
 								</form>
@@ -59,5 +59,4 @@
 {% endblock %}
 {% block javascripts %}
 	{{ parent() }}
-
 {% endblock %}
