--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-/* [class^="col"] {
+[class^="col"] {
   border: 1px solid rgb(212, 95, 95)!important;
 }
 
 [class^="row"] {
   border: 1px solid yellow!important;
-} */
+}
 
 * { box-sizing: border-box; }
 
@@ -186,6 +186,10 @@ color: RED;
 .accueil {
   position: relative;
   top: calc(10vh + 8vw);
+}
+
+.logo {
+  max-width: 230px;
 }
 
 .logoSpec {
